2007-04-27  Shawn Betts  <sabetts@vcn.bc.ca>

	* primitives.lisp (+netwm-supported+): new constant
	(+netwm-window-types+): likewise
	(+wm-take-focus+): remove constant
	(+wm-state+): likewise
	(+wm-protocols+): likewise
	(+wm-delete-window+): likewise
	(utf8-to-string): new function

	* core.lisp (send-selection): pass args to change-property
	properly.
	(translate-id): replace unknown chars with ?
	(xwin-net-wm-name): new function
	(xwin-name): call xwin-net-wm-name
	(default-border-width-for-type): handle :dialog type
	(gravity-for-window): likewise
	(xwin-type): return supported netwm types
	(xwin-strut): newfunction
	(delete-window): intern the atom
	(net-set-properties): new function
	(init-screen): call net-set-properties

	* stumpwm.lisp (timer-p): remove function

	* primitives.lisp (print-backtrace): new function
	(print-backtrace): print to *standard-output* for sbcl

	* stumpwm.lisp (stumpwm-internal-loop): use handler-bind for
	errors. print a backtrace for the error.

2007-04-25  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp (*root-map*): add "h" binding
	(*help-map*): new global
	(lookup-symbol): new function
	(:variable): new stumpwm type
	(:function): likewise
	(:key-seq): likewise
	("describe-key"): new command
	("describe-variable"): likewise
	("describe-function"): likewise
	("where-is"): likewise

	* primitives.lisp (*suppress-echo-timeout*): rename from
	*supress-echo-timeout*. all callers updated.

	* kmap.lisp (print-key-seq): new function
	(lookup-key-sequence): likewise
	(kmap-p): likewise
	(search-kmap): likewise

	* input.lisp (read-key-no-modifiers): new function
	(read-one-char): call read-key-no-modifiers

	* core.lisp (unmap-all-message-windows): cancel the timer
	(unmap-all-frame-indicators): likewise
	(reset-message-window-timer): just call the unmap function in the
	timer
	(reset-frame-indicator-timer): likewise
	(echo-string-list): if *suppress-echo-timeout* is T, cancel the
	message timer.
	(message-no-timeout): new function