@@ -1,3 +1,11 @@
+2007-05-03  Shawn Betts  <sabetts@vcn.bc.ca>
+
+	* primitives.lisp (*new-frame-action*): new global
+
+	* core.lisp (choose-new-frame-window): new function
+	(split-frame): call choose-new-frame-window. show the new frame's
+	window.
+
 2007-04-27  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* primitives.lisp (+netwm-supported+): new constant
